fix overflow for AOS

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10648,6 +10648,10 @@ body {
   font-family: "roboto", sans-serif;
 }
 
+#app {
+  overflow: hidden;
+}
+
 ul {
   list-style-type: none;
 }
@@ -10732,7 +10736,7 @@ strong {
 .timeline {
   position: relative;
   margin: 50px 10px;
-  padding: 40px 0;
+  padding: 0;
 }
 
 .timeline:before {
