--- a/resources/sass/_general.scss
+++ b/resources/sass/_general.scss
@@ -2,6 +2,9 @@ body {
     font-family: "roboto", sans-serif;
 }
 
+#app {
+    overflow: hidden;
+}
 
 ul {
     list-style-type: none;
