--- a/resources/sass/_timeline.scss
+++ b/resources/sass/_timeline.scss
@@ -1,7 +1,7 @@
 .timeline {
     position: relative;
     margin: 50px 10px;
-    padding: 40px 0;
+    padding: 0;
 }
 
 .timeline:before {
